fixed key issue and also title so it will be visible when scrolling

--- a/client/src/styles/calendar-card.css
+++ b/client/src/styles/calendar-card.css
@@ -50,8 +50,9 @@
     text-align: left;
     list-style: square;
     height: 100%;
-    width: 100;
+    width: 160px;
      font-family: system-ui, -apple-system, BlinkMacSystemFont;
+    padding-left: 0;
   }
 
   .calendar-card li {
